--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,24 +6,38 @@
     <meta name="description" content="**Краткое описание**">
     <title>Барбершоп Легенда</title>
     <link rel="stylesheet" href="../src/css/bootstrap.min.css">
+    <style>
+      .header-main {
+        background-color: black;
+      }
+      .container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: white
+      }
+      .nav {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      .nav-list li{
+        display: inline-block;
+        list-style: none;
+      }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="card col-6">
-            <h5 class="card-header">Аксентий Поприщин</h5>  
-            <div class="card-body">
-              <h6 class="card-subtitle">43 апреля 2000 года</h6>
-              <p>
-                Сегодняшний день — есть день величайшего торжества!
-                В Испании есть король. Он отыскался. Этот король я.
-                Именно только сегодня об этом узнал я.
-              </p>
-              <a href="" class="btn btn-primary">Читать целиком</a>
-            </div>
-          </div>
-        <nav></nav>
-    </header>
-    <main></main>
-    <footer></footer>
+
+  <header class="header-main">
+    <div class="container">
+      <p>number</p>
+      <div><p>logo</p></div>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li>nav1</li>
+          <li>nav2</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
