--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,5 +39,17 @@
       </nav>
     </div>
   </header>
+
+  <main>
+    <p>О нас / описание</p>
+    <p>Услуги</p>
+    <p>Работы</p>
+    <p>Мастера?</p>
+  </main>
+  
+  <footer>
+    <p>Телефон, соц сети</p>
+    <p>Адрес</p>
+  </footer>
 </body>
 </html>
