--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,8 +10,6 @@
       .wrapper {
         background-color: black;
       }
-      /* .header-main {
-      } */
       .container {
         max-width: 1080px;
         color: white;
@@ -134,5 +132,7 @@
     <p style="color: aquamarine;">Лого</p>
     <p style="color: aquamarine;">Адрес</p>
   </footer>
+  
+  <script type="text/javascript" src="https://w910348.yclients.com/widgetJS" charset="UTF-8"></script>
 </body>
 </html>
