--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% load thumbnail %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -5,58 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="**Краткое описание**">
     <title>Барбершоп Легенда</title>
-    <link rel="stylesheet" href="../src/css/bootstrap.min.css">
-    <style>
-      .wrapper {
-        background-color: black;
-      }
-      .container {
-        max-width: 1080px;
-        color: white;
-        text-align: center;
-      }
-      .head-container{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-      .nav {
-        font-family: Arial, Helvetica, sans-serif;
-      }
-      .nav-list li{
-        display: inline-block;
-        list-style: none;
-      }
-      .services{
-        display: flex;
-        justify-content: space-between;
-      }
-      .services b{
-        display: block;
-        flex: 1;
-        height: 3px;
-        background-color: rgba(255, 255, 255, 0.5);
-        margin: auto 0;
-      }
-      .services-title{
-        margin: 0 15px;
-        text-transform: uppercase;
-      }
-      table{
-        width: 100%;
-        text-align: left;
-      }
-      table td{
-        border-bottom: 1px solid;
-        border-color: rgba(255, 255, 255, 0.5);
-        padding: 5px;
-      }
-      .foot-container{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-    </style>
+    <link rel="stylesheet" href="{% static 'src/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'src/css/main_page.css' %}">
 </head>
 <body class="wrapper">
   <header class="">
@@ -91,18 +43,12 @@
             <h2>Стоимость</h2>
           </td>
         </tr>
-        <tr>
-          <td width="445">Мужская стрижка</td>
-          <td width="64">800 р.</td>
-        </tr>
-        <tr>
-          <td width="445">Моделирование бороды и усов</td>
-          <td width="64">300 р.</td>
-        </tr>
-        <tr>
-          <td width="445">Детская стрижка</td>
-          <td width="64">500 р.</td>
-        </tr>
+        {% for service in services %}
+          <tr>
+            <td width="445">{{ service.name }}</td>
+            <td width="64">{{ service.price }} р.</td>
+          </tr>
+        {% endfor %}
       </tbody>
     </table>
     <!-- Карта -->
@@ -123,6 +69,12 @@
     </div>
     
     <p style="margin-top: 150px; color: aquamarine;">Работы</p>
+    {% for haircut in haircuts %}
+      {% thumbnail haircut.image "100x100" crop="center" as im %}
+        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+      {% endthumbnail %} 
+      {{ haircut.image }} 
+    {% endfor %}
     <p style="margin-bottom: 150px; color: aquamarine;">Мастера??</p>
   </main>
   
