--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -67,10 +67,13 @@
     </table>
     <!-- Карта -->
     <div style="position:relative;overflow:hidden;margin-top: 40px;">
-      <a href="https://yandex.ru/maps/org/hot_mode/211442931255/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Hot Mode</a><a href="https://yandex.ru/maps/2/saint-petersburg/category/barber_shop/239628851835/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">
-        Барбершоп в Санкт‑Петербурге
+      <a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">
+        Санкт‑Петербург
       </a>
-      <iframe src="https://yandex.ru/map-widget/v1/org/hot_mode/211442931255/?ll=30.480888%2C59.922900&z=17" width="80%" height="500" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+      <a href="https://yandex.ru/maps/2/saint-petersburg/?from=mapframe&ll=30.480749%2C59.922824&mode=routes&rtext=~59.922824%2C30.480749&rtt=pd&ruri=~ymapsbm1%3A%2F%2Forg%3Foid%3D211442931255&source=mapframe&utm_medium=mapframe&utm_source=maps&z=20.8" style="color:#eee;font-size:12px;position:absolute;top:14px;">
+        Яндекс Карты
+      </a>
+      <iframe src="https://yandex.ru/map-widget/v1/?from=mapframe&ll=30.480749%2C59.922824&mode=routes&rtext=~59.922824%2C30.480749&rtt=pd&ruri=~ymapsbm1%3A%2F%2Forg%3Foid%3D211442931255&source=mapframe&utm_source=mapframe&z=20.8" width="80%" height="500" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
     </div>
     <!-- Отзывы -->
     <div style="display: flex;justify-content: center;">
