--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="**Краткое описание**">
     <title>Барбершоп Легенда</title>
+    <link rel="icon" href="{% static 'src/favicon.png' %}" type="image">
     <link rel="stylesheet" href="{% static 'src/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'src/css/main_page.css' %}">
 </head>
@@ -16,12 +17,6 @@
       <p style="color: aquamarine;">Телефон</p>
       <p style="color: aquamarine;">Виджет</p>
       <div><p style="color: aquamarine;">logo</p></div>
-      <nav class="nav">
-        <ul class="nav-list">
-          <li style="color: aquamarine;">nav1</li>
-          <li style="color: aquamarine;">nav2</li>
-        </ul>
-      </nav>
     </div>
   </header>
 
